--- a/cars.html
+++ b/cars.html
@@ -212,7 +212,10 @@
             <p>&copy; 2024 sende kirala rent a car her hakkı saklıdı.</p>
         </div>
     </footer>
-
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
    
 
     <style>
