--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+   
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Rent A Car</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +36,7 @@
     <div class="footer-container">
       <div class="footer-section about">
         <br><br>
-          <h1>iletişim</h1>
+          <center><h1>iletişim</h1></center>
           <p></p>
           <br><br>
           <ul class="list-group">
