--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         </div>
     </header>
 
+    <br><br>
+    <center>KAMPANYA</center>
     <div class="container my-5">
         <div class="row">
             <div class="col-lg-4">
@@ -46,7 +48,7 @@
                     <img src="mercedes-1338063_640.jpg" class="card-img-top" alt="Car 1">
                     <div class="card-body">
                         <h5 class="card-title">mercedes</h5>
-                        <p class="card-text">populer lüsk kategorisi</p>
+                        <p class="card-text">ilk kiralamada 250 tl ye varan kupon hediye populer lüsk kategorisi</p>
                         <a href="rent.html" class="btn btn-primary">ŞİMDİ KİRALA</a>
                     </div>
                 </div>
@@ -56,7 +58,7 @@
                     <img src="bmw-30.jpg" class="card-img-top" alt="Car 2">
                     <div class="card-body">
                         <h5 class="card-title">bmw</h5>
-                        <p class="card-text">populer lüsk kategorisi.</p>
+                        <p class="card-text">ilk kiralamada 250 tl ye varan kupon hediye populer lüsk kategorisi.</p>
                         <a href="rent.html" class="btn btn-primary">ŞİMDİ KİRALA</a>
                     </div>
                 </div>
@@ -66,7 +68,7 @@
                     <img src="car-6809596_640.jpg" class="card-img-top" alt="Car 3">
                     <div class="card-body">
                         <h5 class="card-title">citroen</h5>
-                        <p class="card-text">populer lüsk kategorisi.</p>
+                        <p class="card-text">ilk kiralamada 250 tl ye varan kupon hediye populer lüsk kategorisi.</p>
                         <a href="rent.html" class="btn btn-primary">ŞİMDİ KİRALA</a>
                     </div>
                 </div>
