--- a/contact.html
+++ b/contact.html
@@ -36,19 +36,19 @@
     <div class="footer-container">
       <div class="footer-section about">
         <br><br>
-          <center><h1>iletişim</h1></center>
+          <center><h1>iletişim</h1>
           <p></p>
           <br><br>
           <ul class="list-group">
             <li class="list-group-item active" aria-current="true">İLETİŞİM</li>
-            <li style="background-color: rgb(223, 162, 162);" class="list-group-item">TELEFON : 0531883245</li>
+            <li style="background-color: rgb(223, 162, 162);" class="list-group-item">TELEFON : 053188553245</li>
             <li style="background-color: rgb(223, 162, 162);"  class="list-group-item">E-POSTA : sendekirala@GMAİL.COM</li>
             <li style="background-color: rgb(223, 162, 162);"  class="list-group-item">ADRES : konakalar mahhalesi osman caddesi antalya</li>
             <li  style="background-color: rgb(223, 162, 162);" class="list-group-item">FAX :0531883245</li>
           </ul>
-                    
+        </center>
                 
-              <br><br><br>
+              <br><br><br><p><br><br><br>
               <footer class="bg-dark text-white text-center py-4">
                 <div class="container">
                     <p>&copy; 2024 sende kirala rent a car her hakkı saklıdı.</p>
