--- a/rent.html
+++ b/rent.html
@@ -119,6 +119,10 @@
                                   <label for="returnLocation">İADE KONUMU</label>
                                   <input type="text" class="form-control" id="returnLocation" placeholder="Enter return location">
                               </div>
+                              <div class="form-group col-md-6">
+                                <label for="returnLocation">İADE KAMPANYA KODU</label>
+                                <input type="text" class="form-control" id="returnLocation" placeholder="Enter return location">
+                            </div>
                           </div>
               
                           <!-- Additional Options Section -->
