--- a/rent.html
+++ b/rent.html
@@ -113,15 +113,15 @@
                           <div class="form-row">
                               <div class="form-group col-md-6">
                                   <label for="pickupLocation">TESLİM ALMA KONUM</label>
-                                  <input type="text" class="form-control" id="pickupLocation" placeholder="Enter pick-up location">
+                                  <input type="text" class="form-control" id="pickupLocation" placeholder="TESLİM KONUMU">
                               </div>
                               <div class="form-group col-md-6">
                                   <label for="returnLocation">İADE KONUMU</label>
-                                  <input type="text" class="form-control" id="returnLocation" placeholder="Enter return location">
+                                  <input type="text" class="form-control" id="returnLocation" placeholder="İADE KONUMU">
                               </div>
                               <div class="form-group col-md-6">
                                 <label for="returnLocation">İADE KAMPANYA KODU</label>
-                                <input type="text" class="form-control" id="returnLocation" placeholder="Enter return location">
+                                <input type="text" class="form-control" id="returnLocation" placeholder="KUPAO KODU">
                             </div>
                           </div>
               
