--- a/cars.html
+++ b/cars.html
@@ -84,7 +84,7 @@
                     <div class="card-body">
                         <h5 class="card-title">wolkswaGEN</h5>
                         <p class="card-text">wolkswaGEN populer ve lüks arabalar kategorisindedir.</p>
-                        <a href="indexwolkswagen.html" class="btn btn-primary">Learn More</a>
+                        <a href="indexwolkswagen.html" class="btn btn-primary">arbaya git</a>
                     </div>
                 </div>
             </div>
