--- a/rent.html
+++ b/rent.html
@@ -120,8 +120,8 @@
                                   <input type="text" class="form-control" id="returnLocation" placeholder="İADE KONUMU">
                               </div>
                               <div class="form-group col-md-6">
-                                <label for="returnLocation">İADE KAMPANYA KODU</label>
-                                <input type="text" class="form-control" id="returnLocation" placeholder="KUPAO KODU">
+                                <label for="returnLocation"> KAMPANYA KODU</label>
+                                <input type="text" class="form-control" id="returnLocation" placeholder="KUPONU KODU">
                             </div>
                           </div>
               
@@ -188,5 +188,8 @@
                 }
                 
                 </style>
+                 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+                 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+                 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
             </body>
         </html>
