--- a/rent.html
+++ b/rent.html
@@ -144,7 +144,7 @@
                           </div>
               
                           <!-- Submit Button -->
-                          <button type="submit" class="btn btn-primary btn-block">KİRALA</button>
+                <a href="kiralmabitiş.html">    <button type="submit" class="btn btn-primary btn-block">KİRALA</button></a>
                           
                       </form>
                   </div>
