--- a/kiralmabitiş.html
+++ b/kiralmabitiş.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kiralama</title>/title>
+    <title>Rent a Car - Rent A Car</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+
+
 </head>
 <body>
-    <img src="tik-isareti-nasil-yapilir_hz9g.jpg">
-</body>
-</html>
+<img src="tik-isareti-nasil-yapilir_hz9g.jpg">
+
+    </body>
+    </html>
