--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
                 </div>
             </div>
         </div>
+
+        <div><button><a href="dosya.html">dosya</a></button></div>
     </section>
 
     <!-- Footer -->
